--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -11,7 +11,7 @@ server {
         proxy_set_header Host $http_host;
    }       
     
-    location /django_static/ {
-        alias /admindata/django_static/;
+    location /.django_static/ {
+        alias /realstatus/.django_static/;
     }
 }
