--- a/nginx/nginx-setup.conf
+++ b/nginx/nginx-setup.conf
@@ -5,13 +5,13 @@ upstream backend {
 
 server {
     listen 8080;
-
-    location /admindash/ {
-        proxy_pass http://backend/admindash/;
-        proxy_set_header Host $http_host;
-   }       
     
-    location /.django_static/ {
-        alias /realstatus/.django_static/;
+    location /admin/ {
+        proxy_pass http://backend/admin/;
+        proxy_set_header Host $http_host;
+    }
+
+    location /.static_root/ {
+        alias /realstatus/.static_root/;
     }
 }
