--- a/realstatus/Dockerfile
+++ b/realstatus/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install -r requirements.txt
 COPY . /realstatus/
 
 # static file 
-RUN python manage.py collectstatic --no-input
+RUN python manage.py collectstatic 
